external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_missing_angle.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:37
  │
3 │     struct S<phantom T1, phantom T2 { }
  │             -                       ^ Expected '>'
  │             │                        
  │             To match this '<'

